[package]
name = "rhai-fs"
version = "0.1.2"
edition = "2021"
authors = ["Dan Killinger <git@dank.anonaddy.com>"]
repository = "https://github.com/rhaiscript/rhai-fs"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Filesystem package for Rhai"
keywords = ["scripting", "scripting-language", "embedded", "rhai", "filesystem"]
categories = ["embedded"]

[features]
default = []
metadata = ["rhai/metadata"] # doc generation
sync = ["rhai/sync"]         # support `sync` builds of Rhai
no_index = []                # support `no_index` builds of Rhai

[dependencies]
rhai = { version = ">=1.9" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
rhai = { version = ">=1.11" }
serde_json = "1.0.82"
serde = "1.0.140"

# NOTE: Need to manually specify `metadata` feature for local `cargo doc`.
[package.metadata.docs.rs]
features = ["metadata"]
